@@ -1639,20 +1639,91 @@ TEST(Shared_MixedWithNonShared)
 }
 
 
-TEST(MultipleRollbacks) 
+TEST(GroupShared_MultipleRollbacks)
 {
-    SharedGroup sg("test.tightdb");    
-    sg.begin_write();
-    sg.rollback();
-    sg.rollback();
+    File::try_remove("test.tightdb");
+    {
+        SharedGroup sg("test.tightdb");
+        sg.begin_write();
+        sg.rollback();
+        sg.rollback();
+    }
+    File::remove("test.tightdb");
 }
 
-TEST(MultipleEndReads) 
+TEST(GroupShared_MultipleEndReads)
 {
-    SharedGroup sg("test.tightdb");    
-    sg.begin_read();
-    sg.end_read();
-    sg.end_read();
+    File::try_remove("test.tightdb");
+    {
+        SharedGroup sg("test.tightdb");
+        sg.begin_read();
+        sg.end_read();
+        sg.end_read();
+    }
+    File::remove("test.tightdb");
+}
+
+
+TEST(GroupShared_ReserveDiskSpace)
+{
+    File::try_remove("test.tightdb");
+    {
+        SharedGroup sg("test.tightdb");
+        File::SizeType orig_file_size = File("test.tightdb").get_size();
+
+        // Check that reserve() does not change the file size if the
+        // specified size is less than the actual file size.
+        File::SizeType reserve_size_1 = orig_file_size / 2;
+        sg.reserve(reserve_size_1);
+        File::SizeType new_file_size_1 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_1 == orig_file_size);
+
+        // Check that reserve() does not change the file size if the
+        // specified size is equal to the actual file size.
+        File::SizeType reserve_size_2 = orig_file_size;
+        sg.reserve(reserve_size_2);
+        File::SizeType new_file_size_2 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_2 == orig_file_size);
+
+        // Check that reserve() does change the file size if the
+        // specified size is greater than the actual file size, and
+        // that the new size is at least as big as the requested size.
+        File::SizeType reserve_size_3 = orig_file_size + 1;
+        sg.reserve(reserve_size_3);
+        File::SizeType new_file_size_3 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_3 >= reserve_size_3);
+
+        // Check that disk space reservation is independent of transactions
+        {
+            WriteTransaction wt(sg);
+            wt.get_table<TestTableShared>("table_1")->add_empty_row(2000);
+            wt.commit();
+        }
+        orig_file_size = File("test.tightdb").get_size();
+        File::SizeType reserve_size_4 = 2 * orig_file_size + 1;
+        sg.reserve(reserve_size_4);
+        File::SizeType new_file_size_4 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_4 >= reserve_size_4);
+        WriteTransaction wt(sg);
+        wt.get_table<TestTableShared>("table_2")->add_empty_row(2000);
+        orig_file_size = File("test.tightdb").get_size();
+        File::SizeType reserve_size_5 = orig_file_size + 333;
+        sg.reserve(reserve_size_5);
+        File::SizeType new_file_size_5 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_5 >= reserve_size_5);
+        wt.get_table<TestTableShared>("table_3")->add_empty_row(2000);
+        wt.commit();
+        orig_file_size = File("test.tightdb").get_size();
+        File::SizeType reserve_size_6 = orig_file_size + 459;
+        sg.reserve(reserve_size_6);
+        File::SizeType new_file_size_6 = File("test.tightdb").get_size();
+        TIGHTDB_ASSERT(new_file_size_6 >= reserve_size_6);
+        {
+            WriteTransaction wt(sg);
+            wt.commit();
+        }
+    }
+    File::remove("test.tightdb");
 }
 
 #endif // TEST_SHARED
